Feat: jdk17버전은 List.getFirst()가 존재하지 않기에 수정